istio-teaching/release/whole/vs-part.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: emailservice
spec:
  hosts:
  - "emailservice"
  http:
  - route:
    - destination:
        host: emailservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: paymentservice
spec:
  hosts:
  - "paymentservice"
  http:
  - match:
    - headers:
        version:
          exact: v2
      uri:
        prefix: /
    route:
    - destination:
        host: paymentservice
        subset: v2
  - match:
    - headers:
        version:
          exact: v1
      uri:
        prefix: /
    route:
    - destination:
        host: paymentservice
        subset: v1
  - route:
    - destination:
        host: paymentservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productcatalogservice
spec:
  hosts:
  - "productcatalogservice"
  http:
  - route:
    - destination:
        host: productcatalogservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cartservice
spec:
  hosts:
  - "cartservice"
  http:
  - route:
    - destination:
        host: cartservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: currencyservice
spec:
  hosts:
  - "currencyservice"
  http:
  - route:
    - destination:
        host: currencyservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shippingservice
spec:
  hosts:
  - "shippingservice"
  http:
  - route:
    - destination:
        host: shippingservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis-cart
spec:
  hosts:
  - "redis-cart"
  http:
  - route:
    - destination:
        host: redis-cart
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: adservice
spec:
  hosts:
  - "adservice"
  http:
  - route:
    - destination:
        host: adservice
        subset: v1
---
